# ai-part-recommendation

./: .gitignore  1.5.0  2.5.0  AI Parts Recommendation System.docx  API_README.md  CONDA_SETUP.md  Dockerfile  README.md  VENV_SETUP.md  activate_conda.sh  activate_venv.sh  alembic.ini  env.example  environment.yml  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_api.py
.github/workflows/: sphinx.yml
docs/: __init__.py  database_schema.md  ema_calculator_guide.md  model_accuracy_testing.md
examples/: api_usage.py  ema_usage_example.py
migrations/: env.py
migrations/versions/: 0001_initial_schema.py
scripts/: __init__.py  init_database.py  monitor_production_accuracy.py  run_backtest.py  setup_database.sh
source/: conf.py  index.rst  modules.rst  scripts.rst  src.airflow_dags.rst  src.api.rst  src.config.rst  src.data.rst  src.models.rst  src.rst  src.services.rst  src.testing.rst  src.utils.rst  tests.integration.rst  tests.load.rst  tests.rst  tests.unit.rst
source/_static/: custom.css
src/: __init__.py
src/airflow_dags/: __init__.py
src/api/: __init__.py  dependencies.py  exceptions.py  feedback.py  health.py  main.py  models.py  recommendations.py
src/config/: __init__.py  logging.py  settings.py
src/data/: __init__.py  database.py  models.py  repositories.py
src/models/: __init__.py  base_model.py  calibration.py  ema_calculator.py  lightgbm_model.py  model_factory.py  model_loader.py  seasonal_adjustments.py  validation.py
src/services/: __init__.py  recommendation_service.py
src/testing/: __init__.py  ab_testing.py  backtesting.py  monitoring.py  pilot_analysis.py  validation_report.py
src/utils/: __init__.py  cache_utils.py  constants.py  datetime_utils.py  hashing_utils.py  json_utils.py  validation_utils.py
tests/: __init__.py
tests/integration/: __init__.py  test_ema_integration.py
tests/load/: __init__.py
tests/unit/: __init__.py  test_ema_calculator.py  test_monitoring.py  test_validation.py
